logs/Slang/chapter-5/5.10-structure-arrays-illegal.sv.log
name: structure-arrays-illegal
description: Structure array assignment tests
should_fail: 1
tags: 5.10
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.10-structure-arrays-illegal.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.10-structure-arrays-illegal.sv:14:18: error: language feature not yet supported
  ms_t ms[1:0] = '{0, 0, 1, 1};
                 ^~~~~~~~~~~~~
